--- a/Index.html
+++ b/Index.html
@@ -16,10 +16,10 @@
             <nav>
                 <a href="#"><img src="./imagenes/logo.png" alt=""></a>
                 <ul>
-                    <a href="./pages/prestamo.html">Préstamo</a>
-                    <a href="./pages/empresas.html">Empresas</a>
-                    <a href="./pages/personas.html">Personas</a>
-                    <a href="./pages/atencionusuario.html">Atención al Usuario</a>
+                    <a href="./pages/prestamo.php">Préstamo</a>
+                    <a href="./pages/empresas.php">Empresas</a>
+                    <a href="./pages/personas.php">Personas</a>
+                    <a href="./pages/atencionusuario.php">Atención al Usuario</a>
                 </ul>
             </nav>
         </div>
